Resolves: OKTA-476273 - Fixing SIW hanging scrollbar when we have a dropdown at the very end

--- a/assets/sass/_container.scss
+++ b/assets/sass/_container.scss
@@ -8,7 +8,7 @@
   background-color: $secondary-bg-color;
   color: $medium-text-color;
   position: relative;
-  overflow: auto;
+  overflow: hidden;
 
   // Auth-container styles
   border-radius: 3px;
